Added demo login details

--- a/public/login.html
+++ b/public/login.html
@@ -19,14 +19,14 @@
         </div>
         <form action="#" class="login__form">
             <h2 class="heading-secondary">
-                Welcome
+                Demo
             </h2>
             <div class="login__form__group">
-                <input type="email" id="email" class="login__form__input" required>
+                <input type="email" id="email" class="login__form__input" required value="admin@demo.com">
                 <span class="login__form__span" data-placeholder="Email"></span>
             </div>
             <div class="login__form__group">
-                <input type="password" id="password" class="login__form__input" required>
+                <input type="password" id="password" class="login__form__input" required value="password123">
                 <span class="login__form__span" data-placeholder="Password"></span>
             </div>
             <div class="login__form__group">
@@ -36,7 +36,7 @@
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"
-    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 
